1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* dev.c: Add #include <sys/mman.h> for munmap decl.
	* pager.c: Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* dev.c (dev_buf_fill): Use munmap instead of vm_deallocate.
	(dev_close): Likewise.
	(dev_read): Likewise.
	* pager.c (pager_write_page): Likewise.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* storeio.c (check_open_hook): Translate D_NO_SUCH_DEVICE to ENXIO.

1999-05-09  Mark Kettenis  <kettenis@gnu.org>

	* pager.c (dev_stop_paging): Do not try to count ports in
	PAGER_PORT_BUCKET if it has not been created.

1999-04-30  Mark Kettenis  <kettenis@gnu.org>

	* storeio.c (trivfs_modify_stat): Do not assume that we have the
	device open in the caculation of st_mode.  If the device is not
	open, only return S_IFCHR if inhibit_cache is set.

1999-01-31  Roland McGrath  <roland@baalperazim.frob.com>

	* storeio.c (trivfs_modify_stat): Return S_IFCHR if block size is 1.

	* storeio.c (trivfs_modify_stat): Return S_IFCHR iff inhibit_cache
	set, otherwsie S_IFBLK.  For a block-addressed device, S_IFCHR means
	"must do whole-block i/o".

1999-01-28  Roland McGrath  <roland@baalperazim.frob.com>

	* io.c (trivfs_S_file_syncfs): Fix inverted test.
	Reported by OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>.

1999-01-27  Roland McGrath  <roland@baalperazim.frob.com>

	* storeio.c (options): New option -c/--no-cache.
	(inhibit_cache): New variable.
	(parse_opt): Make -c set it.
	(trivfs_append_args): Report --no-cache if set.
	(check_open_hook): Pass inhibit_cache flag to dev_open.
	* dev.h (struct dev): New member `inhibit_cache'.
	(dev_open): Update decl.
	* dev.c (dev_open): Take new arg inhibit_cache, store in new dev.
	If set, don't initialize buf_offs, io_lock, pager, pager_lock.
	(dev_read, dev_write): If DEV->inhibit_cache is set, allow only
	whole-block i/o: EINVAL for non-whole-block attempts.
	* pager.c (dev_get_memory_object): If DEV->inhibit_cache is set, don't